--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="author" content="Kushal Samant">
    <meta name="description" content="Official Site / Kushal Samant">
-   <meta name="keywords" content="Architects, Architecture, Art, Artist, Artists, Curation, Curator, Curators, CSS, Emoji Mosaic, Film, HTML, Independent, Javascript, Media, Nomad, Nomads, Nomadic, Office, People, Places, Social, Visual Art, Web">
+   <meta name="keywords" content="Architect, Architects, Architecture, Art, Artist, Artists, Curation, Curator, Curators, CSS, Design, Designer, Designers, Emoji Mosaic, Engineer, Engineering, Engineers, Film, HTML, Independent, Javascript, Media, Nomad, Nomads, Nomadic, Office, People, Places, Social, Visual Art, Web">
    <meta name="p:domain_verify" content="bdc4625d72c6065e2d597f201d1843b7"/>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="/assets/css/style.css">
