--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://kushalsamant.github.io/start.html">Start&nbsp;&#60;</a><br>
+                  <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
          </div>
