--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,12 @@
 			<a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
             <br>
 
+<a href="" rel="noopener noreferrer" target="_blank">Shutterstock</a>.  
+
             <a href="https://discord.gg/36xan8g8" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logodiscord.png" alt="Discord" width="30"></a>
             <a href="https://payhip.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopayhip.png" alt="Payhip" width="30"></a>
             <a href="https://in.pinterest.com/kvshvl/_saved/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
+            <a href="https://www.shutterstock.com/g/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshtterstock.png" alt="Shutterstock" width="30"></a>
             <a href="https://society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6  png" alt="Society6" width="30"></a>
             <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
