--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
             <a href="https://payhip.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopayhip.png" alt="Payhip" width="30"></a>
             <a href="https://pexels.com/@kushal-samant-1609529511/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopexels.png" alt="Pexels" width="30"></a>
             <a href="https://in.pinterest.com/kvshvl/_saved/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
-            <a href="https://geometry.printify.me/products" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogeometry.png" alt="Printify" width="30"></a>
+            <a href="https://geometry.printify.me/products" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogeometry.png" alt="Geometry" width="30"></a>
             <a href="https://raspberrycreekfabrics.com/collections/studio-kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoraspberrycreekfabrics.png" alt="Raspberry Creek Fabrics" width="30"></a>
             <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
             <a href="https://sketchfab.com/3d-models/shlvng-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosketchfab.png" alt="Sketchfab" width="30"></a>
