--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
+ e 
+    <style>
+        html {
+            scroll-behavior: smooth; /* Enable smooth scrolling for the entire page */
+        }
+    </style>
+  </head>
+  
 <!-- Google tag (gtag.js) start-->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MX1SJPM4HE"></script>
    <script>
