--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,14 @@
       html {scroll-behavior: smooth; } /* Enable smooth scrolling for the entire page */
    </style>  
 <!-- Google tag (gtag.js) start-->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MX1SJPM4HE"></script>
-   <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0LNSC1VBGQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'G-MX1SJPM4HE');
-   </script>
+  gtag('config', 'G-0LNSC1VBGQ');
+</script>
 <!-- Google tag (gtag.js) end-->
 <!-- Impact tag start-->
    <meta name='impact-site-verification' value='406b4bdb-6dd4-4bc5-8ec1-37530d818b69'>
@@ -68,7 +68,7 @@
             <a href="https://payhip.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopayhip.png" alt="Payhip" width="30"></a>
             <a href="https://pexels.com/@kushal-samant-1609529511/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopexels.png" alt="Pexels" width="30"></a>
             <a href="https://in.pinterest.com/kvshvl/_saved/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
-            <a href="https://geometry.printify.me/products" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogeometry.png" alt="Geometry" width="30"></a>
+            <a href="https://geometry.printify.me/products/1" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogeometry.png" alt="Geometry" width="30"></a>
             <a href="https://raspberrycreekfabrics.com/collections/studio-kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoraspberrycreekfabrics.png" alt="Raspberry Creek Fabrics" width="30"></a>
             <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
             <a href="https://sketchfab.com/3d-models/shlvng-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosketchfab.png" alt="Sketchfab" width="30"></a>
@@ -81,7 +81,7 @@
             <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
             <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
             <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="Twitter" width="30"></a>
-   			<a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
+            <a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
 -->
          </div>
       </footer>
