--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
    </div>
 <!-- Fotomoto tag start-->
    <script type="text/javascript" src="//widget.fotomoto.com/stores/script/655edc7d210bd907c7c41d52956d234dddd5e6de.js"></script>
-   <noscript>If Javascript is disabled in your browser, to place orders please visit the page where I <a href=' https://my.fotomoto.com/store/655edc7d210bd907c7c41d52956d234dddd5e6de'>sell my photos</a>, powered by <a href='https://my.fotomoto.com'>Fotomoto</a>.</noscript>
+   <noscript>If Javascript is disabled in your browser, to place orders please visit the page where I <a href="https://my.fotomoto.com/store/655edc7d210bd907c7c41d52956d234dddd5e6de">sell my photos</a>, powered by <a href='https://my.fotomoto.com'>Fotomoto</a>.</noscript>
 <!-- Fotomoto tag start-->
 </body>
 </html>
