--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,7 @@
                 <a href="https://contrado.com/stores/kvshvl" rel="noopener noreferrer" target="_blank">Contrado</a> |
                 <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank">Gumroad</a> |
                 <a href="https://news.ycombinator.com/user?id=kvshvl" rel="noopener noreferrer" target="_blank">Hacker News</a> |
+                <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank">Medium</a> |
                 <a href="https://patreon.com/c/kvshvl" rel="noopener noreferrer" target="_blank">Patreon</a> |
                 <a href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank">Setmore</a> |
                 <a href="https://sketchfab.com/3d-models/shelving-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank">Sketchfab</a> |
