--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
                 <a href="https://behance.net/kvshvl" rel="noopener noreferrer" target="_blank">Behance</a> |
                 <a href="https://contrado.com/stores/kvshvl" rel="noopener noreferrer" target="_blank">Contrado</a> |
                 <a href="http://www.fiverr.com/s/2Kqy7Ve" rel="noopener noreferrer" target="_blank">Fiverr</a> |
+                <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank">Github</a> |
                 <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank">Gumroad</a> |
                 <a href="https://news.ycombinator.com/user?id=kvshvl" rel="noopener noreferrer" target="_blank">Hacker News</a> |
                 <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank">Medium</a> |
