--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,7 @@
                 <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank">Github</a> |
                 <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank">Gumroad</a> |
                 <a href="https://news.ycombinator.com/user?id=kvshvl" rel="noopener noreferrer" target="_blank">Hacker News</a> |
+                <a href="https://www.linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank">LinkedIn</a> |
                 <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank">Medium</a> |
                 <a href="https://patreon.com/c/kvshvl" rel="noopener noreferrer" target="_blank">Patreon</a> |
                 <a href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank">Setmore</a> |
